--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,17 +5,153 @@ html,body{
 }
 .google{
   height: 200px;
+  margin-top: 5.55rem !important;
 }
 
-/* .google__logo {
-} */
+.google__logo {
+  height: 92px !important;
+  aspect-ratio: auto 272 / 92 !important;
+}
 
 .search__input {
-  width: 528px !important;
+  width: 584px !important;
+  min-height: 44px  !important;
+  border: 1px solid #dfe1e5!important ;
+  box-shadow: none !important;
+  border-radius: 24px !important;
+  margin-top: 1.66rem !important;
+  
+  
 }
 
 .search__btn{
   background-color: #f8f9fa !important;
-  font-size: 11.5px !important;
+  border: 1px solid #f8f9fa !important;
+  font-size: 14px !important;
+  height: 36px !important;
+  min-width: 54px !important;
+  text-align: center !important;
+  cursor: pointer !important;
+  user-select: none !important;
   
+}
+.search__btn:hover{
+  border-color:#9aa0a6 !important;
+  
+}
+.barra__input:hover{
+  border-color:#9aa0a6 !important;
+  
+}
+
+
+
+
+
+.ofrecido__div{
+  font-size: 11px;
+  color: #4d5156;
+}
+
+.english__a{
+  color: #1a0dab !important;
+}
+
+footer{
+    font-size: 15px;
+    background-color: #f2f2f2;
+    
+}
+
+.footer__div{
+  width: auto !important;
+}
+
+.nicaragua__div{
+  border-bottom: 1px solid #dadce0;
+  margin-top: 8px !important;
+}
+
+.nicaragua__p{
+  margin-top: 3px !important;
+}
+
+.images__a, .avanzada__a{
+  text-decoration: none !important;
+  color: rgba(0, 0, 0, .87) !important;
+  cursor: pointer !important;
+  font: 13px arial,  sans-serif;
+}
+.acceder__a{
+  text-decoration: none !important;
+  color: #f2f2f2 !important;
+  cursor: pointer !important;
+  font-family: Google Sans, Roboto, Helvetica, Arial, sans-serif !important;
+  font-weight: 500 !important;
+  font-size: 14px !important;
+  letter-spacing: .25px !important;
+  line-height: 16px !important;
+  min-width: 96px !important;
+  text-align: center !important;
+  vertical-align: middle !important;
+  box-sizing: border-box !important;
+  margin-left: 12px !important;
+  margin-right: 12px !important;
+  
+
+
+}
+
+.acceder__btn{
+    border: 1px solid transparent !important;
+    padding-top: 5px !important;
+    background: #1a73e8 !important;
+    
+    
+    
+   
+}
+
+.text__footer{
+  font-size: 14px !important;
+  font-family: arial, sans-serif !important;
+  color: #202124 !important;
+
+}
+
+.lupa{
+  bottom: 0.65rem !important;
+  left: 0.7rem;
+  color: #9aa0a6 !important;
+  
+}
+
+.mic__div{
+  margin-top: -30px;
+  
+}
+
+.cam__div{
+  margin-top: -23px;
+  
+}
+
+
+.barra__input{
+  margin-left: 2rem;
+
+}
+
+.busqueda{
+  margin-left: 2.5rem;
+  font-size: 16px;
+  height: 1.7rem;
+  width: 27rem;
+  border: none;
+  transition: border-color;
+
+}
+
+#input:focus{
+  border: none !important;
 }
