--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,273 @@
-html,body{
+html,
+body {
   font-family: arial, sans-serif !important;
   height: 100%;
-  
+
 }
-.google{
+
+.google {
   height: 200px;
+  margin-top: 0.5% !important;
 }
 
 /* .google__logo {
 } */
 
 .search__input {
-  width: 528px !important;
+  max-width: 584px;
+  padding-left: 3rem !important;
+  padding-bottom:0.6rem !important ;
+  
+}
+
+.search__input:focus {
+  box-shadow: 0 1px 6px rgba(32, 33, 36, .28) !important;
+  border-color: rgba(223, 225, 229, 0) !important;
+}
+
+.search__input:hover {
+  background-color: #fff;
+  box-shadow: 0 1px 6px rgba(32, 33, 36, .28) !important;
+  border-color: rgba(223, 225, 229, 0) !important;
+}
+
+.search__input:focus-visible {
+  outline: none;
+}
+
+.search__input {
+  height: 48px;
+  width: 100%;
+}
+
+footer {
+  background: #f2f2f2;
+  font-size: 15px !important;
+}
+
+.quicklinks_ul {
+  margin-bottom: 0;
+  align-items: center;
 }
 
 .search__btn{
   background-color: #f8f9fa !important;
-  font-size: 11.5px !important;
-  
+  font-size: 14px !important;
+  border: 1px solid #f8f9fa !important;
+  font-size: 14px !important;
+  height: 36px !important;
+  min-width: 54px !important;
+  text-align: center !important;
+  cursor: pointer !important;
+  user-select: none !important;
+  color: #202124 !important;
+
 }
+.search__btn:hover{
+  background-color: #fff;
+  box-shadow: 0 1px 6px rgba(32, 33, 36, .28) !important;
+  border-color: rgba(223, 225, 229, 0) !important;
+
+}
+
+
+  .images__a, .avanzada__a{
+    text-decoration: none !important;
+    color: rgba(0, 0, 0, .87) !important;
+    cursor: pointer !important;
+    font: 13px arial,  sans-serif;
+  
+  }
+
+.quick-links {
+  justify-content: space-between;
+
+}
+
+a {
+  color: rgba(0, 0, 0, .87) !important
+}
+
+.nicaragu_div {
+  border-bottom: 1px solid #dadce0;
+}
+
+
+
+@media screen and (max-width:997px){
+  .nav__ul{
+    margin-left: 0px !important;
+    display: flex !important;
+    justify-content: start !important;
+    font-size: 12px !important;
+  }
+  .nav__a{
+    display: flex !important;
+    font-size: 10px !important;
+    justify-content: start !important;
+    align-items: end !important;
+    margin-top: 1rem ;
+  }
+ .app__span{
+    margin-top: 10.5px !important;
+  }
+
+  .ofrecido__div, .english__a{
+    font-size: 10px !important;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .quick-links {
+    justify-content: space-evenly;
+
+  }
+  .nav__ul{
+    display: flex;
+    justify-content: start !important;
+    margin-left: 0 !important;
+    padding-left: 0 !important;
+  }
+  .nav__a{
+    display: flex !important;
+    font-size: 10px !important;
+    justify-content: start !important;
+    align-items: end !important;
+    margin-top: 1rem ;
+  }
+
+  .app__img{
+    height: 1.3rem;
+  }
+
+  .app__span{
+    margin-top: 10.5px !important;
+  }
+
+  .button{
+    font-size: 10px !important;
+    
+  }
+
+  .ofrecido__div, .english__a{
+    font-size: 9.5px !important;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .quick-links {
+    font-size: 12px;
+
+  }
+  .ofrecido__div, .english__a{
+    font-size: 9px !important;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .quick-links>div {
+    justify-content: center !important;
+    gap: 1rem !important;
+  }
+  
+  /* .app__img, .app__span, .app__li{
+    visibility: hidden;
+  } */
+  .nav__a{
+    font-size: 9px !important;    
+  }
+
+  .ul__div{
+    display: flex !important;
+    justify-content: start !important;
+    margin-left: 0 !important;
+  }
+    
+
+}
+
+.acceder__a{
+  text-decoration: none !important;
+  color: #f2f2f2 !important;
+  cursor: pointer !important;
+  font-family: Google Sans, Roboto, Helvetica, Arial, sans-serif !important;
+  font-weight: 500 !important;
+  font-size: 14px !important;
+  letter-spacing: .25px !important;
+  line-height: 16px !important;
+  min-width: 96px !important;
+  text-align: center !important;
+  vertical-align: middle !important;
+  box-sizing: border-box !important;
+  margin-left: 12px !important;
+  margin-right: 12px !important;
+
+
+
+}
+
+.acceder__btn{
+    border: 1px solid transparent !important;
+    padding-top: 5px !important;
+    background: #1a73e8 !important;
+}
+
+
+.ofrecido__div{
+  font-size: 11px;
+  color: #4d5156;
+}
+
+.english__a{
+  color: #1a0dab !important;
+}
+
+.lupa{
+  bottom: 0.9rem !important;
+  color: #9aa0a6 !important;
+  font-size: 1.3rem !important;
+  left: 1rem;
+
+}
+
+.mic{
+  
+  height: 1.2rem !important;
+  width: 1.2rem !important;
+
+}
+
+.mic__div{
+  right: 3.7rem;
+  top: 1.5rem;
+
+}
+.cam__div{
+  right: 1rem;
+  top: 1.5rem;
+
+}
+.cam{
+  height: 1.6rem !important;
+  width: 1.6rem !important;
+}
+
+
+
+.btns__div{
+  margin-top: 1.8rem !important;
+}
+
+.btns__div{
+  height: 46px !important;
+  min-width: 54px !important;
+  font-size: 14px !important;
+}
+
+.ofrecido__div{
+  color: #4d5156;
+  font: 13px arial, sans-serif;
+}
+
+
+
